2012-05-04  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java:
	  The way to get mouse position is improved.

	* MLTermPty.java:
	  isTrackingMouse() method is added to check mouse traking mode is on or off.

	* ml_vt100_parser.[ch], x_screen.c, java/MLTermPty.c:
	  Extended mouse report(SGR/URXVT) is supported.

	* x_draw_str.c: Even if fg/bg color is reversed, bd_color and ul_color
	  options work correctly.
	  (Thanks to Andi Cristian Serbanescu)

	* mkf/script/config.guess, kiklib/script/config.guess,
	  script/config.guess: updated (timestamp='2012-02-10')

	* mkf/script/config.sub, kiklib/script/config.sub,
	  script/config.sub: updated (timestamp='2012-04-18')

	* win32/x_window.c: Fixed typo.

2012-04-30  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL: Updated.

	* configure.in: --enable-sixel option is added.

	* ml_vt100_parser.c: DCS .. q .. ST sequence is supported.

	* Sixel format picture is partially supported.

	* "add_picture" and "remove_picture" are added to configuration protocol.

	* version.h.in: 3.1.1 => 3.1.1 post

2012-04-29  Araki Ken  <arakiken@users.sf.net>

	* 3.1.1 released.
	  (tag "rel-3_1_1")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.1.

	* configure.in: If xlib is not found, configure script exits.

	* kik_pty_streams.c:
	  <kik_config.h> is included instead of <kik_def.h> to
	  fix segfault in 64bit Linux.

	* mlterm.1, mlclient.1: Updated.

	* x_main_config.c, main_loop.c:
	  --sep, --button3, --clip, --restart and --logmsg options are
	  moved from main_loop.c to x_main_config.c to enable to specify
	  them for mlclient.

2012-04-22  Araki Ken  <arakiken@users.sf.net>

	* ml_color.[ch], x_color_config.c:
	  It is possible to change 0-15 colors by OSC 4 sequence.

2012-04-21  Araki Ken  <arakiken@users.sf.net>

	* 3.1.0 released.
	  (tag "rel-3_1_0")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.0.
