@@ -1,6 +1,7 @@
 * Support extended mouse tracking mode.
   (CSI ? 1006 h and CSI ? 1006 l / CSI ? 1015 h and CSI ? 1015 l)
 * Support sixel graphics sequence partially. (DCS .. q .. ST)
+* Support FocusIn/FocusOut event tracking. (CSI ? 1004 h and CSI ? 1004 l)
 * Add "add_picture" and "remove_picture" to configuration protocol.
 * Bug fixes:
   Fix a bug which disabled "bd_color" and "ul_color" options in reverse characters.
