@@ -627,20 +627,16 @@ reverse_video(
 static void
 set_mouse_report(
 	ml_vt100_parser_t *  vt100_parser ,
-	ml_mouse_report_mode_t  mode		/* EXTENDED_MOUSE_REPORT bit is 0 */
+	ml_mouse_report_mode_t  mode
 	)
 {
 	if( HAS_XTERM_LISTENER(vt100_parser,set_mouse_report))
 	{
 		stop_vt100_cmd( vt100_parser , 0) ;
 
-		/* EXTENDED_MOUSE_REPORT bit is not changed. */
-		vt100_parser->mouse_mode &= EXTENDED_MOUSE_REPORT_MASK ;
-		vt100_parser->mouse_mode |= mode ;
-
-		/* EXTENDED_MOUSE_REPORT bit is not passed. */
 		(*vt100_parser->xterm_listener->set_mouse_report)(
-			vt100_parser->xterm_listener->self , mode) ;
+			vt100_parser->xterm_listener->self ,
+			(vt100_parser->mouse_mode = mode)) ;
 
 		start_vt100_cmd( vt100_parser , 0) ;
 	}
@@ -1323,6 +1319,7 @@ soft_reset(
 		: &vt100_parser->saved_normal)->is_saved = 0 ;
 
 	vt100_parser->mouse_mode = 0 ;
+	vt100_parser->ext_mouse_mode = 0 ;
 	vt100_parser->is_app_keypad = 0 ;
 	vt100_parser->is_app_cursor_keys = 0 ;
 	vt100_parser->is_app_escape = 0 ;
@@ -2075,31 +2072,31 @@ parse_vt100_escape_sequence(
 							set_mouse_report( vt100_parser ,
 								ANY_EVENT_MOUSE_REPORT) ;
 						}
+						else if( ps[count] == 1004)
+						{
+							/* "CSI ? 1004 h" */
+
+							vt100_parser->want_focus_event = 1 ;
+						}
 						else if( ps[count] == 1005)
 						{
 							/* "CSI ? 1005 h" */
 
-							vt100_parser->mouse_mode &=
-								~EXTENDED_MOUSE_REPORT_MASK ;
-							vt100_parser->mouse_mode |=
+							vt100_parser->ext_mouse_mode =
 								EXTENDED_MOUSE_REPORT_UTF8 ;
 						}
 						else if( ps[count] == 1006)
 						{
 							/* "CSI ? 1006 h" */
 
-							vt100_parser->mouse_mode &=
-								~EXTENDED_MOUSE_REPORT_MASK ;
-							vt100_parser->mouse_mode |=
+							vt100_parser->ext_mouse_mode =
 								EXTENDED_MOUSE_REPORT_SGR ;
 						}
 						else if( ps[count] == 1015)
 						{
 							/* "CSI ? 1015 h" */
 
-							vt100_parser->mouse_mode &=
-								~EXTENDED_MOUSE_REPORT_MASK ;
-							vt100_parser->mouse_mode |=
+							vt100_parser->ext_mouse_mode =
 								EXTENDED_MOUSE_REPORT_URXVT ;
 						}
 					#if  0
@@ -2298,6 +2295,12 @@ parse_vt100_escape_sequence(
 							/* "CSI ? 1001 l" X11 mouse highlighting */
 						}
 					#endif
+						else if( ps[count] == 1004)
+						{
+							/* "CSI ? 1004 h" */
+
+							vt100_parser->want_focus_event = 0 ;
+						}
 						else if( ps[count] == 1005 ||
 						         ps[count] == 1006 ||
 							 ps[count] == 1015)
@@ -2307,8 +2310,7 @@ parse_vt100_escape_sequence(
 							 * "CSI ? 1006 l"
 							 * "CSI ? 1015 l"
 							 */
-							vt100_parser->mouse_mode &=
-								~EXTENDED_MOUSE_REPORT_MASK ;
+							vt100_parser->ext_mouse_mode = 0 ;
 						}
 					#if  0
 						else if( ps[count] == 1010)
